@startuml Domain Model

    class User {}

    class Sentence {
        <<sentenceDescription>>
        <<syntacticTree>>
    }

    class Analyzer {}
    
    class TemplateGenerator {}

    class Template {
        <<templateDescription>>
        <<wordCount>>
    }

    class SystemDictionary {}

    class WordPicker {}
    
    class SentenceGenerator {}

    class Validator {
        <<results>>
        <<mode>>
    }

    class Nouns {}

    class Verbs {}

    class Adjectives {}

    class SentenceStructures {}

    SentenceStructures -o TemplateGenerator
    Nouns -* SystemDictionary
    Verbs -* SystemDictionary
    Adjectives -* SystemDictionary

    User "1"--"*" Sentence
    Analyzer "1"--"*" Sentence
    SentenceGenerator "1"--"*" Sentence
    Validator "1"--"*" Sentence
    SentenceGenerator "1"--"1" Template
    SentenceGenerator "1"--"1" WordPicker
    TemplateGenerator "1"--"1" Template
    SystemDictionary "1"--"1" WordPicker

@enduml